--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -16,10 +16,22 @@
   "cells": [
     {
       "metadata": {
+        "id": "XunkC1qGdhV7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install matplotlib seaborn numpy scipy keras scikit-learn jupyter dill"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "008xo4lZdGvB",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "2490bd16-f4a2-4ddb-e5df-df23758e9c27"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -81,27 +93,7 @@
         "siamese_net.count_params()\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "38951745"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
@@ -118,8 +110,7 @@
       "metadata": {
         "id": "RLXksMsTdGvJ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3993118e-46b7-457b-d602-1cd153b5b859"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -137,26 +128,14 @@
         "print(cval.keys())"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "training alphabets\n",
-            "dict_keys(['Hebrew', 'Ojibwe_(Canadian_Aboriginal_Syllabics)', 'Japanese_(katakana)', 'Arcadian', 'Asomtavruli_(Georgian)', 'Syriac_(Estrangelo)', 'Grantha', 'Tagalog', 'Gujarati', 'Tifinagh', 'Latin', 'Bengali', 'Inuktitut_(Canadian_Aboriginal_Syllabics)', 'Alphabet_of_the_Magi', 'Early_Aramaic', 'Braille', 'Korean', 'Greek', 'Futurama', 'Blackfoot_(Canadian_Aboriginal_Syllabics)', 'Anglo-Saxon_Futhorc', 'Mkhedruli_(Georgian)', 'Sanskrit', 'Malay_(Jawi_-_Arabic)', 'Cyrillic', 'Balinese', 'Burmese_(Myanmar)', 'Armenian', 'Japanese_(hiragana)', 'N_Ko'])\n",
-            "validation alphabets:\n",
-            "dict_keys(['Sylheti', 'Ge_ez', 'Atlantean', 'Gurmukhi', 'Manipuri', 'Syriac_(Serto)', 'Avesta', 'Mongolian', 'Kannada', 'Oriya', 'Angelic', 'Old_Church_Slavonic_(Cyrillic)', 'Malayalam', 'Keble', 'Glagolitic', 'Tengwar', 'Atemayar_Qelisayer', 'ULOG', 'Aurek-Besh', 'Tibetan'])\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
         "scrolled": false,
         "id": "sXHY1q6udGvM",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "17167925-324b-40a6-bb05-b41f4c9de2b2"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -259,23 +238,13 @@
         "loader = Siamese_Loader(PATH)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "loading data from /home/soren/Desktop/keras-oneshot/train.pickle\n",
-            "loading data from /home/soren/Desktop/keras-oneshot/val.pickle\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
         "id": "S9oQbq_YdGvP",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "cee12f9f-17ad-452d-e9ab-bb93162db01a"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -313,28 +282,14 @@
         "plot_oneshot_task(pairs)\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAHEAAADnCAYAAAApQbmOAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAABvZJREFUeJztnUGW3CAMRHFe7n/lzoqEcbABIUFR\nXX+XzIwN/kjGoHZfn88nibP5tbsBYh5JJEASCZBEAiSRgN+Nn2vqisP19ANFIgGSSIAkEiCJBEgi\nAZJIgCQSIIkESCIBkkhAa9kthOv6uYKkjek5ICLxuq7/xIp+ICRmJNMGlMSMRI4BKTEliRzhakwq\nwmccLVma9PwFdz/x8/m8ilJEttkuMSORdmAkpiSRVqAkpiSRFuAkpiSRo0BKTKktUjL/ASsxJT1e\n9AItMSWJ7AFeotJmmy1bUbMoOn8CHYmKwj5gJT4JVBT+D6xE0Q+kREXhGJASa0jgM3ASNZkZB0qi\n0qgNKInCBoxERaEdGIk1JLAPaImiDwiJtVSqKOwHQqKYY7tEPRfOs11iDaXSMbZK1L3QB8hIFGNs\nk6go9AMmEiXQzhaJmpH6slyi0qg/MOlU2FkqUVEYgyKRgCOLh6M4NVMsi0TNSOPYmk5PGOUnsESi\nojCWcImn186cMAA1Oy04ZWDdCZV4ehRm0KMxTOKpAp/ahyzS5Tmxt4PoAk9F98QKp0WjJBKwTOJp\nqfSkaFQkvnDKwHOR2OrsKRfjVBSJBtBSarjE06PwhPaH7yeijVpGlE4JcJGoaNvLktmpiEXplIDQ\niQ1LhKLfLhSJBEgiAZLYAD2VpuQokeX+1wNaX10jMXeu9f1Pp3BCFKYUkE4Z5J2G7omDIA5SSRwA\nUWBK+lTUK6jS7igSCZBEAiSRAEkkQBIJkEQCJJEASSRAEgmQRAIkkQBJJEASCZBEAiSRAEkkQBIJ\naO3sn1Hu9eUoEgmQRAIkkQBJJEASCZBEAiSRAEkkQBIJkEQCJJEASSRAEgmQRAIkkQBJJEASCZBE\nAiSRgFaNzRmvj/gOHuudFIkvfO1rwa7rOqbzLNC92+2EAeTdRpg3SuWOeQyC67pev7Br90DL7ahh\naRuMxNz4mYtcXpjaRUKQl1K9Hbm9lv67S9yZzjwGwhOtfs2er2z7aPtDIhFlxM9QRkZK6/r0+XyG\nA8F1YuMVAVEz3N72lb/XeouypZ25f173RTeJniksX7hdqXmkH5Y+l3/TEtqD23dFRaSbnSKj8XxP\n+rTE6Cn7iMi3EY06GDxkTk1sVj1z9Z7jhK/FLQdT2Z6Ztpkkrp6xzWIdbFG3iJR+Zo3Z8wyn09ME\npoTZ1vvkZoar0cEfP0RZsmKjMzDmt6IksI7HhKlMsRa6JX6jQI9nuF6WT2y+hbedkJXnayGJBtCy\nksozCJBEAGbTsyQ+sGqZ7r7lZWH4njhyMrR7hxdPS2cW8trw0tlp78mmVyEGOmY5V886a2u/r+e8\nrX54PH9DzE5nOzL6t70lEB6ZpBwMUZkJQmIU94u3a923FrkeaTQTIhFliS5fKJRFe89F7xLYSPS8\n4JZjRVe35WPQ3BPveBZcWY8TGbX3QqzZ/uo50Yh3Ydj2QqkSlFqWyPvybJW6d7uG0umK1XuUSVEE\nb9dv2cP+yIk8VzVGiRoIHrPciHaFTWysM8LZTkZ+DmPmuJEZZvvs1CtivZ8FvTNJ6Gx3pFBKbEWf\n2WdGEgmQRAIkkQBJJGC7RK9VoN5ddpRlQU+2Pyd60buIvHtJb/va6S56O+5dy+L5rpnyb70XJoYX\nwHeP5FFmLlhUX73LRUwli+gi7xGE3N7lNTb3mpXW7+6iHOnIAr1wrzv1vnCoIqJ2SyzHhJ7Y7BC4\nsny/1jeId7t5MHrDr3W85zMOteOvGDRPoqy3gTCJlpmXdbZ2f0b0eDdMFD1l/T2/VzK0YtNKNZYG\n3P92psQQUV45EXy7LjNFzsNvz3j95YkiXbSL70nvfbZRMPZ4kOGdfc/C3pS45ZU4XDe/nf3d5fWn\nEtnXbbsY3yQwmu1bUWIeSSRAEgmQRAJgJTKWUUQBIfEUYajthFwAnyFyQ3jFmzAsuL6MaHfH7qsi\nva868TpXSuML/lvenuG55Nb7fz3nrP397Meoa9ReZzJzDo/M4ZZOR0ZVbe+v5/+ezls7Znku667K\n0x7l079ni7Gsg+H4e2JkRVoW2RooXoPEyvZvqFlRgjGTVnP7ogXOXIfpSEQtZKox2taeorDR8z8d\nd9mLF+7M7ORnVg0Ar0nOzMfAPaO5xCzxaYqd0v5HjSesk5zaMbzwyGRTXzNU4i0uuoTeSpkSZx/8\nvQaD+WE/9G0QgPfZWr89PlOx9GF/1XITksC3W0Tks+0o3RJ3FtWuZvQij9wnI4IB6mEfQWBKcWkx\napBCbEV9C1GDVBIJeE2nqJugKKy8Pm9RrEgkQBIJkEQCJJEASSRAEgmQRAIkkQBJJEASCZBEAiSR\nAEkkQBIJkEQCJJEASSRAEgmQRAJaL+gTB6BIJEASCZBEAiSRAEkkQBIJ+ANUadHyA8XI6QAAAABJ\nRU5ErkJggg==\n",
-            "text/plain": [
-              "<matplotlib.figure.Figure at 0x7f157e85e5f8>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
         "scrolled": true,
         "id": "pZFpDQngdGvT",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a96b7582-d9b8-4b1d-fb9a-d70b5afc68ce"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -366,17 +321,7 @@
         "        print(\"iteration {}, training loss: {:.2f},\".format(i,loss))\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "!\n",
-            "training\n",
-            "8.25082"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
