--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -16,135 +16,209 @@
   "cells": [
     {
       "metadata": {
+        "id": "9l3Eh5u2sANL",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Load images from git and copy it to gdrive path"
+      ]
+    },
+    {
+      "metadata": {
         "id": "XunkC1qGdhV7",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1105
-        },
-        "outputId": "e82dd780-4b3d-4915-8309-f7296c385a97"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "!pip install matplotlib seaborn numpy scipy keras scikit-learn jupyter dill\n",
         "\n",
+        "import os\n",
+        "\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "drive.mount('/content/gdrive')\n",
+        "\n",
+        "OMNIGLOT_CLONE=\"/content/gdrive/My Drive/data/SiameseNet/omniglot\"\n",
+        "OMNIGLOT_PICKLE=\"/content/gdrive/My Drive/data/SiameseNet/pickle\"\n",
+        "\n",
+        "if not os.path.exists(OMNIGLOT_PICKLE):\n",
+        "    os.makedirs(OMNIGLOT_PICKLE)\n",
+        "\n",
+        "if not os.path.exists(os.path.dirname(OMNIGLOT_CLONE)):\n",
+        "    os.makedirs(os.path.dirname(OMNIGLOT_PICKLE))"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (2.1.2)\n",
-            "Requirement already satisfied: seaborn in /usr/local/lib/python3.6/dist-packages (0.7.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (1.14.6)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (1.1.0)\n",
-            "Requirement already satisfied: keras in /usr/local/lib/python3.6/dist-packages (2.2.4)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (0.20.2)\n",
-            "Requirement already satisfied: jupyter in /usr/local/lib/python3.6/dist-packages (1.0.0)\n",
-            "Requirement already satisfied: dill in /usr/local/lib/python3.6/dist-packages (0.2.8.2)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib) (2.3.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib) (0.10.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib) (2.5.3)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib) (1.11.0)\n",
-            "Requirement already satisfied: pytz in /usr/local/lib/python3.6/dist-packages (from matplotlib) (2018.9)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.6/dist-packages (from keras) (3.13)\n",
-            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from keras) (1.0.5)\n",
-            "Requirement already satisfied: keras-applications>=1.0.6 in /usr/local/lib/python3.6/dist-packages (from keras) (1.0.6)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras) (2.8.0)\n",
-            "Requirement already satisfied: qtconsole in /usr/local/lib/python3.6/dist-packages (from jupyter) (4.4.3)\n",
-            "Requirement already satisfied: jupyter-console in /usr/local/lib/python3.6/dist-packages (from jupyter) (6.0.0)\n",
-            "Requirement already satisfied: notebook in /usr/local/lib/python3.6/dist-packages (from jupyter) (5.2.2)\n",
-            "Requirement already satisfied: ipywidgets in /usr/local/lib/python3.6/dist-packages (from jupyter) (7.4.2)\n",
-            "Requirement already satisfied: ipykernel in /usr/local/lib/python3.6/dist-packages (from jupyter) (4.6.1)\n",
-            "Requirement already satisfied: nbconvert in /usr/local/lib/python3.6/dist-packages (from jupyter) (5.4.0)\n",
-            "Requirement already satisfied: jupyter-core in /usr/local/lib/python3.6/dist-packages (from qtconsole->jupyter) (4.4.0)\n",
-            "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.6/dist-packages (from qtconsole->jupyter) (0.2.0)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.6/dist-packages (from qtconsole->jupyter) (2.1.3)\n",
-            "Requirement already satisfied: traitlets in /usr/local/lib/python3.6/dist-packages (from qtconsole->jupyter) (4.3.2)\n",
-            "Requirement already satisfied: jupyter-client>=4.1 in /usr/local/lib/python3.6/dist-packages (from qtconsole->jupyter) (5.2.4)\n",
-            "Requirement already satisfied: ipython in /usr/local/lib/python3.6/dist-packages (from jupyter-console->jupyter) (5.5.0)\n",
-            "Collecting prompt-toolkit<2.1.0,>=2.0.0 (from jupyter-console->jupyter)\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d1/e6/adb3be5576f5d27c6faa33f1e9fea8fe5dbd9351db12148de948507e352c/prompt_toolkit-2.0.7-py3-none-any.whl (338kB)\n",
-            "\u001b[K    100% |████████████████████████████████| 348kB 29.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied: terminado>=0.3.3; sys_platform != \"win32\" in /usr/local/lib/python3.6/dist-packages (from notebook->jupyter) (0.8.1)\n",
-            "Requirement already satisfied: nbformat in /usr/local/lib/python3.6/dist-packages (from notebook->jupyter) (4.4.0)\n",
-            "Requirement already satisfied: tornado>=4 in /usr/local/lib/python3.6/dist-packages (from notebook->jupyter) (4.5.3)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.6/dist-packages (from notebook->jupyter) (2.10)\n",
-            "Requirement already satisfied: widgetsnbextension~=3.4.0 in /usr/local/lib/python3.6/dist-packages (from ipywidgets->jupyter) (3.4.2)\n",
-            "Requirement already satisfied: mistune>=0.8.1 in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter) (0.8.4)\n",
-            "Requirement already satisfied: entrypoints>=0.2.2 in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter) (0.3)\n",
-            "Requirement already satisfied: testpath in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter) (0.4.2)\n",
-            "Requirement already satisfied: bleach in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter) (3.0.2)\n",
-            "Requirement already satisfied: pandocfilters>=1.4.1 in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter) (1.4.2)\n",
-            "Requirement already satisfied: defusedxml in /usr/local/lib/python3.6/dist-packages (from nbconvert->jupyter) (0.5.0)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.6/dist-packages (from traitlets->qtconsole->jupyter) (4.3.0)\n",
-            "Requirement already satisfied: pyzmq>=13 in /usr/local/lib/python3.6/dist-packages (from jupyter-client>=4.1->qtconsole->jupyter) (17.0.0)\n",
-            "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /usr/local/lib/python3.6/dist-packages (from ipython->jupyter-console->jupyter) (4.6.0)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.6/dist-packages (from ipython->jupyter-console->jupyter) (40.6.3)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.6/dist-packages (from ipython->jupyter-console->jupyter) (0.7.5)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.6/dist-packages (from ipython->jupyter-console->jupyter) (0.8.1)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.6/dist-packages (from prompt-toolkit<2.1.0,>=2.0.0->jupyter-console->jupyter) (0.1.7)\n",
-            "Requirement already satisfied: ptyprocess; os_name != \"nt\" in /usr/local/lib/python3.6/dist-packages (from terminado>=0.3.3; sys_platform != \"win32\"->notebook->jupyter) (0.6.0)\n",
-            "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /usr/local/lib/python3.6/dist-packages (from nbformat->notebook->jupyter) (2.6.0)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from jinja2->notebook->jupyter) (1.1.0)\n",
-            "Requirement already satisfied: webencodings in /usr/local/lib/python3.6/dist-packages (from bleach->nbconvert->jupyter) (0.5.1)\n",
-            "\u001b[31mipython 5.5.0 has requirement prompt-toolkit<2.0.0,>=1.0.4, but you'll have prompt-toolkit 2.0.7 which is incompatible.\u001b[0m\n",
-            "\u001b[31mcufflinks 0.14.6 has requirement plotly>=3.0.0, but you'll have plotly 1.12.12 which is incompatible.\u001b[0m\n",
-            "Installing collected packages: prompt-toolkit\n",
-            "  Found existing installation: prompt-toolkit 1.0.15\n",
-            "    Uninstalling prompt-toolkit-1.0.15:\n",
-            "      Successfully uninstalled prompt-toolkit-1.0.15\n",
-            "Successfully installed prompt-toolkit-2.0.7\n",
-            "\u001b[0;31;1mWARNING: The following packages were previously imported in this runtime:\n",
-            "  [prompt_toolkit]\n",
-            "You must restart the runtime in order to use newly installed versions.\u001b[0m\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
         "id": "jk3kBccafaHK",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 170
-        },
-        "outputId": "386e8377-f0c7-4d6e-d757-b71740e29552"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "%%bash\n",
-        "\n",
-        "git clone https://github.com/brendenlake/omniglot \"/content/gdrive/My Drive/omniglot\"\n",
-        "python load_data.py --path <PATH TO THIS FOLDER>\n"
+        "DIR='/content/gdrive/My Drive/data/SiameseNet/omniglot'\n",
+        "if [ ! -d \"$DIR\" ]\n",
+        "then\n",
+        "git clone https://github.com/brendenlake/omniglot \"$DIR\"\n",
+        "fi\n",
+        "#python load_data.py --path $DIR\n",
+        "ls \"$DIR\"\n",
+        "echo \"--\"\n",
+        "ls \"/content/gdrive/My Drive/data/SiameseNet/pickle\"\n",
+        "echo \"--\""
       ],
-      "execution_count": 34,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "yFAhZ5_nrXfX",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Load images, labels and store it as pickle file"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "2q-7ydkWI_kg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 369
+        },
+        "outputId": "aed0ea22-a4f9-4b0b-a9d2-60c71898d32c"
+      },
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "import numpy as np\n",
+        "from scipy.misc import imread\n",
+        "import pickle\n",
+        "import os\n",
+        "import matplotlib.pyplot as plt\n",
+        "import argparse\n",
+        "import subprocess\n",
+        "\"\"\"Script to preprocess the omniglot dataset and pickle it into an array that's easy\n",
+        "    to index my character type\"\"\"\n",
+        "\n",
+        "#parser = argparse.ArgumentParser()\n",
+        "#parser.add_argument(\"--path\",help=\"Path where omniglot folder resides\")\n",
+        "#parser.add_argument(\"--save\", help = \"Path to pickle data to.\", default=os.getcwd())\n",
+        "#args = parser.parse_args()\n",
+        "\n",
+        "\n",
+        "data_path = os.path.join(os.path.dirname(OMNIGLOT_CLONE),\"omniglot\" ,\"python\")\n",
+        "train_folder = os.path.join(data_path,'images_background')\n",
+        "valpath = os.path.join(data_path,'images_evaluation')\n",
+        "\n",
+        "save_path = OMNIGLOT_PICKLE\n",
+        "\n",
+        "lang_dict = {}\n",
+        "\n",
+        "\n",
+        "def loadimgs(path,n=0):\n",
+        "    #if data not already unzipped, unzip it.\n",
+        "    if not os.path.exists(path):\n",
+        "        print(\"unzipping file: \"+path+\".zip\")\n",
+        "        os.chdir(data_path)\n",
+        "        #os.system()\n",
+        "        subprocess.check_output([\"unzip\", path+\".zip\"])\n",
+        "    else:\n",
+        "        print(path+\" Exists\")\n",
+        "    X=[]\n",
+        "    y = []\n",
+        "    cat_dict = {}\n",
+        "    lang_dict = {}\n",
+        "    curr_y = n\n",
+        "    #we load every alphabet seperately so we can isolate them later\n",
+        "    for alphabet in os.listdir(path):\n",
+        "        print(\"loading alphabet: \" + alphabet)\n",
+        "        lang_dict[alphabet] = [curr_y,None]\n",
+        "        alphabet_path = os.path.join(path,alphabet)\n",
+        "        #every letter/category has it's own column in the array, so  load seperately\n",
+        "        for letter in os.listdir(alphabet_path):\n",
+        "            cat_dict[curr_y] = (alphabet, letter)\n",
+        "            category_images=[]\n",
+        "            letter_path = os.path.join(alphabet_path, letter)\n",
+        "            for filename in os.listdir(letter_path):\n",
+        "                image_path = os.path.join(letter_path, filename)\n",
+        "                image = imread(image_path)\n",
+        "                category_images.append(image)\n",
+        "                y.append(curr_y)\n",
+        "            try:\n",
+        "                X.append(np.stack(category_images))\n",
+        "            #edge case  - last one\n",
+        "            except ValueError as e:\n",
+        "                print(e)\n",
+        "                print(\"error - category_images:\", category_images)\n",
+        "            curr_y += 1\n",
+        "            lang_dict[alphabet][1] = curr_y - 1\n",
+        "    y = np.vstack(y)\n",
+        "    X = np.stack(X)\n",
+        "    return X,y,lang_dict\n",
+        "\n",
+        "X,y,c=loadimgs(train_folder)\n",
+        "print(\"\\nLoaded Images for Train Folder.\")\n",
+        "with open(os.path.join(save_path,\"train.pickle\"), \"wb\") as f:\n",
+        "    print(\"Writing pickle file in {}/{}\\n\".format(save_path, \"train.pickle\"))\n",
+        "    pickle.dump((X,c),f)\n",
+        "\n",
+        "\n",
+        "X,y,c=loadimgs(valpath)\n",
+        "print(\"\\nLoaded Images for Validation Folder. Writing pickle file\\n\")\n",
+        "with open(os.path.join(save_path,\"val.pickle\"), \"wb\") as f:\n",
+        "    print(\"Writing pickle file in {}/{}\\n\".format(save_path, \"val.pickle\"))\n",
+        "    pickle.dump((X,c),f)\n"
+      ],
+      "execution_count": 52,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "/content/gdrive/My Drive\n",
-            "LICENSE\n",
-            "matlab\n",
-            "python\n",
-            "README.md\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Cloning into 'omniglot'...\n",
-            "Checking out files: 100% (25/25)   \rChecking out files: 100% (25/25), done.\n",
-            "bash: line 7: syntax error near unexpected token `newline'\n",
-            "bash: line 7: `python load_data.py --path <PATH TO THIS FOLDER>'\n"
-          ],
-          "name": "stderr"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Angelic': [0, 19],\n",
+              " 'Atemayar_Qelisayer': [20, 45],\n",
+              " 'Atlantean': [46, 71],\n",
+              " 'Aurek-Besh': [72, 97],\n",
+              " 'Avesta': [98, 123],\n",
+              " 'Ge_ez': [124, 149],\n",
+              " 'Glagolitic': [150, 194],\n",
+              " 'Gurmukhi': [195, 239],\n",
+              " 'Kannada': [240, 280],\n",
+              " 'Keble': [281, 306],\n",
+              " 'Malayalam': [307, 353],\n",
+              " 'Manipuri': [354, 393],\n",
+              " 'Mongolian': [394, 423],\n",
+              " 'Old_Church_Slavonic_(Cyrillic)': [424, 468],\n",
+              " 'Oriya': [469, 514],\n",
+              " 'Sylheti': [515, 542],\n",
+              " 'Syriac_(Serto)': [543, 565],\n",
+              " 'Tengwar': [566, 590],\n",
+              " 'Tibetan': [591, 632],\n",
+              " 'ULOG': [633, 658]}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "mJe4QkKxsP6t",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Create Siamese net"
       ]
     },
     {
